--- a/Training/Trainers.storyboard
+++ b/Training/Trainers.storyboard
@@ -29,6 +29,9 @@
                                         <state key="normal" title="Menu">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="buttonPressed:" destination="RP7-T8-Xoz" eventType="touchUpInside" id="uwm-Q3-ZQN"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trainers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FUl-O7-rC7">
                                         <rect key="frame" x="161" y="63" width="92" height="33"/>
@@ -40,13 +43,13 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.50643324710000004" green="0.41741411969999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
-                            <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z2W-aN-vAE">
+                            <view hidden="YES" alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z2W-aN-vAE">
                                 <rect key="frame" x="0.0" y="110" width="414" height="753"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.50643324710000004" green="0.41741411969999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f8y-Cc-0ik">
-                                <rect key="frame" x="0.0" y="110" width="260" height="752"/>
+                                <rect key="frame" x="-260" y="110" width="260" height="752"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNq-Gf-3uo">
@@ -67,6 +70,9 @@
                                         <state key="normal" title="About me">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="aboutMeBtnPressed:" destination="RP7-T8-Xoz" eventType="touchUpInside" id="68m-iH-ABA"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hn6-zr-Atx">
                                         <rect key="frame" x="18" y="102" width="234" height="43"/>
@@ -75,6 +81,9 @@
                                         <state key="normal" title="My trainings">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="myTrainingsBtnPressed:" destination="RP7-T8-Xoz" eventType="touchUpInside" id="jeb-Us-2FH"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZg-UR-Axu">
                                         <rect key="frame" x="18" y="153" width="234" height="43"/>
@@ -83,6 +92,9 @@
                                         <state key="normal" title="Trainings">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="trainingsBtnPressed:" destination="RP7-T8-Xoz" eventType="touchUpInside" id="lt1-2S-dVe"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CqS-FU-WwD">
                                         <rect key="frame" x="18" y="204" width="234" height="43"/>
@@ -91,6 +103,9 @@
                                         <state key="normal" title="Calendar">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="calendarBtnPressed:" destination="RP7-T8-Xoz" eventType="touchUpInside" id="5Ly-n6-7ix"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.50643324710000004" green="0.41741411969999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -99,6 +114,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="RiL-3x-Lbt"/>
                     </view>
+                    <connections>
+                        <outlet property="menuBtn" destination="4K5-28-FK5" id="z83-YS-YVm"/>
+                        <outlet property="sidePanel" destination="f8y-Cc-0ik" id="mHz-ra-kr9"/>
+                        <outlet property="transV" destination="z2W-aN-vAE" id="HIP-8H-GSc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qeg-9m-x63" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
